[tool.poetry]
name = "dio-primeiro-programa-poo"
version = "0.1.0"
description = ""
authors = ["Tiago Tardelli <tiagob.tardelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
